--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.container{
+	width: 100%;
+	background-color: red;
+}
+
+#carousel {
+		width: 940px;
+		
+		margin-right: auto;
+		margin-left: auto;
+		overflow: hidden;
+	}
+
+	#carousel ul {
+		width: 2820px;
+		padding: 0;
+		margin: 0;
+	}
+
+	#carousel ul li {
+		width:940px;
+		text-align: center;
+		height: 380px;
+		list-style: none;
+		float:	left;
+	}
+
+
+
