--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container">
+	<div id="carousel">
+		<div class="arrow" id="right">	
+		</div>
+		<ul class="slides">
+			<li id="slide1">
+				<img src="assets/940x380-1.jpg" width="940" height="380">
+			</li>
+			<li id="slide2">
+				<img src="assets/940x380-2.jpg" width="940" height="380">
+			</li>
+			<li id="slide3">
+				<img src="assets/940x380-3.jpg" width="940" height="380">
+			</li>
+			
+		</div>
+		<div class="arrow" id="left">			
+		</div>
+	</div>
+</div>
